--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16",
     "react-measure": "^2.5.2",
     "react-tabs": "^3.2.1",
+    "react-is": "^18.3.1",
     "scroll-into-view-if-needed": "^2.2.27",
     "styled-components": "^5.2.1"
   },
