--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 .mypy_cache
 *.egg-info
 frontend/node_modules
-beancount_import/frontend_dist/*.js
-beancount_import/frontend_dist/*.css
-beancount_import/frontend_dist/*.map
+#beancount_import/frontend_dist/*.js
+#beancount_import/frontend_dist/*.css
+#beancount_import/frontend_dist/*.map
 .tox
 .coverage
 htmlcov/
